/*
 * $Id: ChangeLog,v 1.2737 2004/04/03 21:13:51 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-04-03 16:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c
    ! Fixed typo in hb_itemCopy() and hb_itemClearMT()
    + Added logic to detect and generate an error on premature string release.

2004-04-04 04:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/compiler/hbusage.c
  * source/compiler/harbour.c
    ! code formatting, mainly putting single-line if,else,while into
      curly brackets as per xHarbour coding convention
    ! remove one TODO item (harbour.exe command line):
       @<file> => compile list of modules in <file>

    /*
    New syntax: harbour.exe @mylist.rsp
       mylist.rsp is a plain text file containing a PRG file in each line.

    Example:
    .---
    |  main.prg
    |  process.prg
    |  doc.prg
    `---
    */

2004-04-03 16:55 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/hbhex2n.c
    + Added function HB_STRTOHEX()
    + Added function HB_HEXTOSTR()

2004-04-03 09:12 UTC-0500 Sylvain Robert <s.robert/at/videotron.ca>
  * source/rtl/filesys.c
    * hb_fsCreate() set the error to _doserrno if possible for MSVC

2004-04-03 13:58 UTC+0200 Giancarlo Niccolai <antispam [at] niccolai/dot/ ws>
  * include/hbapi.h
  * source/vm/garbage.c
  * source/vm/memvars.c
  * source/vm/thread.c
    + added hb_memvarsIsMemvarRefMT to reference local stack memvars in GC
      Mark loop.
    ! fixed GC marking of memvars under MT.

2004-04-02 19:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/fastitem.c

  * source/vm/memvars.c
    + Reinstated condition for Detached Locals in hb_memvarsRelease()

2004-04-02 18:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    ! Corrected HB_IS*() to NOT use complex and wrong HB_IS_OF_TYPE()
